Centralización estilos componentes Liga 1 y Liga 2

--- a/src/app/components/liga1/liga1-fixture/liga1-fixture.component.html
+++ b/src/app/components/liga1/liga1-fixture/liga1-fixture.component.html
@@ -1,10 +1,8 @@
 <!-- Title -->
-<div class="container-fluid background content-block">
+<div class="container-fluid title-container liga-1-cc liga-1-bi block-content">
   <div class="row">
-    <div class="col-10 title">
-      <div class="row">
-        <p class="arrow">HOME<i class="fas fa-chevron-right px-3"></i>LIGA 1<i class="fas fa-chevron-right px-3"></i><span>FIXTURE</span></p>
-      </div>
+    <div class="col-10 title-content">
+      <p class="arrow liga-1-arrow-color">HOME<i class="fas fa-chevron-right px-3"></i>LIGA 1<i class="fas fa-chevron-right px-3"></i><span>FIXTURE</span></p>
       <h1><b>Fixture</b></h1>
     </div>
   </div>
@@ -12,18 +10,26 @@
 <!-- Description -->
 <app-description-league [value]="1"/>
 <!-- Divider -->
-<div class="container-fluid divider"></div>
+<div class="divider liga-1-cc liga-1-bi"></div>
 <!-- Fixture -->
-<div class="fixture-content container-fluid content-block py-5">
+<div class="container-fluid p-4 block-content dark-content">
   <div class="row">
 
-    <!-- Switch Table -->
-    <div class="container-fluid switch-container">
+    <!-- Switch Buttons -->
+    <div class="container-fluid mb-2">
       <div class="row">
         <div class="col-sm-12 col-md-8">
           <div class="row">
-            <div class="col-sm-12 col-md-6 text-center"><button (click)="fixtureSwitch(1)" class="fixture-switch" [ngClass]="{'active': activeButton === 1}"><span>Apertura</span></button></div>
-            <div class="col-sm-12 col-md-6 text-center"><button (click)="fixtureSwitch(2)" class="fixture-switch" [ngClass]="{'active': activeButton === 2}"><span>Clausura</span></button></div>
+            <div class="col-sm-12 col-md-6 text-center">
+              <button (click)="fixtureSwitch(1)" class="switch-button liga-1-cc" [ngClass]="{'active': activeButton === 1}">
+                <span>Apertura</span>
+              </button>
+            </div>
+            <div class="col-sm-12 col-md-6 text-center">
+              <button (click)="fixtureSwitch(2)" class="switch-button liga-1-cc" [ngClass]="{'active': activeButton === 2}">
+                <span>Clausura</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -37,30 +43,42 @@
             @if ($index === 0 || item.round !== matchesByRoundA[$index - 1].round) {
               <p class="fixture-title">Apertura Fecha {{ item.round }}</p>
               <!-- Selector -->
-              <div class="select">
-                <select class="form-select" [(ngModel)]="selectedFixtureA">
+              <div class="fixture-select">
+                <select [(ngModel)]="selectedFixtureA">
                   @for (fixture of fixtureIndexA; track $index) {
                     <option [value]="fixture">Fecha {{ fixture }}</option>
                   }
                 </select>
               </div>
-              <div class="line my-4"></div>
+              <div class="line-content light-bg my-4"></div>
             }
             <div class="container-fluid fixture-location">
               <div class="row">
                 <div class="col-12 text-center">
-                  <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+                  <div class="fixture-location-form">
+                    <p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="container-fluid my-1 fixture-item-bg">
               <div class="fixture-row-container">
-                <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
-                <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+                <div class="col fixture-name text-end W-100">
+                  <span class="team-name">{{ item.homeTeam.name ? item.homeTeam.name : "Por Definir" }}</span>
+                  <span class="team-abbreviation">{{ item.homeTeam.abbreviation ? item.homeTeam.abbreviation : 'PD' }}</span>
+                </div>
+                <div class="col fixture-item">
+                  <img [src]="item.homeTeam.image ? item.homeTeam.image : './assets/images/otros/no-team-liga-1.png'" alt="{{ item.homeTeam.alt ? item.homeTeam.alt : 'no-team-logo' }}">
+                </div>
                 <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
                 <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
-                <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
-                <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+                <div class="col fixture-item">
+                  <img [src]="item.awayTeam.image ? item.awayTeam.image : './assets/images/otros/no-team-liga-1.png'" alt="{{ item.awayTeam.alt ? item.awayTeam.alt : 'no-team-logo' }}">
+                </div>
+                <div class="col fixture-name text-start W-100">
+                  <span class="team-name">{{ item.awayTeam.name ? item.awayTeam.name : "Por Definir" }}</span>
+                  <span class="team-abbreviation">{{ item.awayTeam.abbreviation ? item.awayTeam.abbreviation : 'PD' }}</span>
+                </div>
               </div>
             </div>
           }
@@ -76,30 +94,42 @@
             @if ($index === 0 || item.round !== matchesByRoundC[$index - 1].round) {
               <p class="fixture-title">Clausura Fecha {{ item.round }}</p>
               <!-- Selector -->
-              <div class="select">
-                <select class="form-select" [(ngModel)]="selectedFixtureC">
+              <div class="fixture-select">
+                <select [(ngModel)]="selectedFixtureC">
                   @for (fixture of fixtureIndexC; track $index) {
                     <option [value]="fixture">Fecha {{ fixture }}</option>
                   }
                 </select>
               </div>
-              <div class="line my-4"></div>
+              <div class="line-content light-bg my-4"></div>
             }
             <div class="container-fluid fixture-location">
               <div class="row">
                 <div class="col-12 text-center">
-                  <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+                  <div class="fixture-location-form">
+                    <p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="container-fluid my-1 content-block fixture-item-bg">
               <div class="fixture-row-container">
-                <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
-                <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+                <div class="col fixture-name text-end W-100">
+                  <span class="team-name">{{ item.homeTeam.name ? item.homeTeam.name : "Por Definir" }}</span>
+                  <span class="team-abbreviation">{{ item.homeTeam.abbreviation ? item.homeTeam.abbreviation : 'PD' }}</span>
+                </div>
+                <div class="col fixture-item">
+                  <img [src]="item.homeTeam.image ? item.homeTeam.image : './assets/images/otros/no-team-liga-1.png'" alt="{{ item.homeTeam.alt ? item.homeTeam.alt : 'no-team-logo' }}">
+                </div>
                 <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
                 <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
-                <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
-                <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+                <div class="col fixture-item">
+                  <img [src]="item.awayTeam.image ? item.awayTeam.image : './assets/images/otros/no-team-liga-1.png'" alt="{{ item.awayTeam.alt ? item.awayTeam.alt : 'no-team-logo' }}">
+                </div>
+                <div class="col fixture-name text-start W-100">
+                  <span class="team-name">{{ item.awayTeam.name ? item.awayTeam.name : "Por Definir" }}</span>
+                  <span class="team-abbreviation">{{ item.awayTeam.abbreviation ? item.awayTeam.abbreviation : 'PD' }}</span>
+                </div>
               </div>
             </div>
           }
@@ -110,4 +140,4 @@
   </div>
 </div>
 <!-- Divider -->
-<div class="container-fluid divider"></div>
+<div class="divider liga-1-cc liga-1-bi"></div>
