--- a/src/app/components/liga1/liga1-main/liga1-main.component.css
+++ b/src/app/components/liga1/liga1-main/liga1-main.component.css
@@ -1,120 +1,16 @@
-.nav-options-bar {
-  height: 50px;
-  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 15%);
+.dropdown-menu {
+  border: 0;
+  border-top: 3px solid var(--gold);
+  border-bottom: 3px solid var(--gold);
+  border-radius: 0px;
 }
-.nav-options-bar a {
-  color: #646464;
-  text-decoration: none;
-  font-size: 15px;
+/* Format */
+.format-item:hover .circle {
+  color: var(--liga-1);
 }
-.nav-options-item {
-  height: 50px;
-  text-align: center;
-  padding-top: 15px;
-  transition: border .1s ease-out;
-  -webkit-transition: border .1s ease-out;
-}
-.nav-options-item:hover {
-  border-bottom: 5px solid #d8a928;
-}
-.nav-options-item-selected {
-  border-bottom: 5px solid #d8a928;
-}
-.dropdown-option {
-  height: 50px;
-  border-bottom: 5px solid #d8a928;
-}
-.dropdown-option-item:hover {
-  background-color: #e0e0e0;
-}
-@media screen and (max-width: 767.5px) {
-  .hide-options-D {
-    display: none;
-  }
-}
-@media screen and (min-width: 767.5px) {
-  .hide-options-M {
-    display: none;
-  }
-}
-/* Divisor */
-.divisor-type {
-  height: 10px;
-  background: crimson;
-}
-/* Divider */
-.divider {
-  background: #DC143C;
-  background-image: url('/assets/images/banners/background-pattern.svg');
-  background-size: cover;
-  height: 20px;
-}
-
-/* ======================================================================================================*/
-/* ==============================================Content=================================================*/
-/* ======================================================================================================*/
-.container-fluid .row {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.vertical-center {
-  display: flex;
-  align-items: center;
-}
-.line {
-  width: 220px;
-  height: 8px;
-  background: #DC143C;
-  transform: skew(50deg);
-}
-.line-lg {
-  width: 100%;
-  height: 8px;
-  background: #DC143C;
-  transform: skew(50deg);
-}
-.line2 {
-  width: 60px;
-  height: 4px;
-  background-color: crimson;
-  transition: 1s;
-  transform: skew(50deg);
-}
-.title {
-  font-size: 40px;
-}
-.content-block {
-  user-select: none;
-}
-/* Map */
-.map {
-  background-color: #161513;
-  border-radius: 20px;
-  width: 100%;
-  height: 100%;
-}
-.map svg {
-  fill: #dad8d9;
-  fill-opacity: 1;
-  stroke:#ffffff;
-  stroke-opacity: 1;
-  stroke-width:2.5;
-}
-.map-item-list {
-  width: 35px;
-}
-.map-item-active {
-  fill: #851111;
-  transition: 0.5s;
-}
-.map-item-active:hover {
-  fill: #D8A928;
-}
-.map-item-selected {
-  fill: #D8A928;
-  transition: 0.5s;
-}
+/* ==============================================================*/
+/* ==========================Content=============================*/
+/* ==============================================================*/
 /* Card */
 .info-card {
   background: #fafafa;
@@ -133,73 +29,15 @@
 .info-card p {
   margin: 0px;
 }
-/* Format */
-.format-content {
-  color: #ffffff;
-  background: #161513;
-}
-.format-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.format-item p:first-child {
-  margin: 0px;
-  font-size: 25px;
-}
-.format-item:hover .line2 {
-  width: 90px;
-}
-.format-item div:first-child {
-  display: flex;
-  justify-content: center;
-}
-.format-item:hover .round {
-  color: crimson;
-}
-.round {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
-  color: #161513;
-  min-width: 50px;
-  min-height: 50px;
-  border-radius: 50%;
-  font-size: 30px;
-}
-@media screen and (max-width: 767px) {
-  .format-item div:first-child {
-    margin-bottom: 10px;
-  }
-  .format-item p {
-    text-align: center;
-  }
-  .line2 {
-    width: 100px;
-    margin: 0 auto;
-  }
-  .format-item:hover .line2 {
-    width: 150px;
-  }
-}
 /* Torneos Conmebol */
 .conmebol-tournaments img {
   height: 180px;
 }
 .lineL {
-  width: 60px;
-  height: 4px;
   background: linear-gradient(90deg, #402810 0%, #c39645 50%, #d1a846 100%);
-  transition: 1s;
-  transform: skew(50deg);
 }
 .lineS {
-  width: 60px;
-  height: 4px;
   background: linear-gradient(90deg, #0a1433 0%, #1c3791 50%, #305beb 100%);
-  transition: 1s;
-  transform: skew(50deg);
 }
 .clasifiers-item:hover .lineL {
   width: 85px;
@@ -222,13 +60,4 @@
 }
 .clasifiers .row div:first-child {
   margin-right: 10px;
-}
-/* Descenso */
-.relegation-content {
-  color: #ffffff;
-  background: #161513;
-}
-.relegation-img {
-  width: 450px;
-  border-radius: 30px;
 }
