--- a/src/app/components/liga1/liga1-main/liga1-main.component.html
+++ b/src/app/components/liga1/liga1-main/liga1-main.component.html
@@ -1,7 +1,7 @@
 <app-top-list-teams [value]="value"/>
-<div class="container-fluid divisor-type"></div>
+<div class="divider-sm liga-1-cc"></div>
 <!-- D -->
-<div class="container-fluid bg-light nav-options-bar hide-options-D">
+<div class="container-fluid bg-light nav-options-bar hide-options-D block-content">
   <div class="row">
     <div class="col-lg-2 col-md-3 col-sm-4 p-0">
       <a (click)="mainPage = false;" routerLink="/liga1/equipos">
@@ -26,41 +26,41 @@
   </div>
 </div>
 <!-- M -->
-<div class="dropdown hide-options-M">
-  <button class="btn bg-light dropdown-option w-100 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Liga 1
-  </button>
+<div class="hide-options-M block-content">
+  <button class="bg-light dropdown-btn w-100 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Liga 1</button>
   <ul class="dropdown-menu bg-light w-100">
-    <li><a (click)="mainPage = false;" class="dropdown-item text-center dropdown-option-item" routerLink="/liga1/equipos">Clubes</a></li>
-    <li><a (click)="mainPage = false;" class="dropdown-item text-center dropdown-option-item" routerLink="/liga1/fixture">Fixture</a></li>
-    <li><a (click)="mainPage = false;" class="dropdown-item text-center dropdown-option-item" routerLink="/liga1/tabla">Tabla</a></li>
-    <li><a (click)="mainPage = false;" class="dropdown-item text-center dropdown-option-item" routerLink="/liga1/tecnicos">Técnicos</a></li>
+    <li><a (click)="mainPage = false;" class="dropdown-option-item" routerLink="/liga1/equipos">Clubes</a></li>
+    <li><a (click)="mainPage = false;" class="dropdown-option-item" routerLink="/liga1/fixture">Fixture</a></li>
+    <li><a (click)="mainPage = false;" class="dropdown-option-item" routerLink="/liga1/tabla">Tabla</a></li>
+    <li><a (click)="mainPage = false;" class="dropdown-option-item" routerLink="/liga1/tecnicos">Técnicos</a></li>
   </ul>
 </div>
 <!-- Content -->
 @if (mainPage) {
   <!-- Banner -->
-  <img src="./assets/images/banners/liga1banner.jpg" alt="banner" class="w-100">
+  <img class="w-100" src="./assets/images/banners/liga1banner.jpg" alt="banner">
   <!-- Description -->
   <app-description-league [value]="value"/>
   <!-- Divider -->
-  <div class="container-fluid divider"></div>
+  <div class="divider liga-1-cc liga-1-bi"></div>
   <!-- Mapa -->
-  <div class="container-fluid bg-light py-5 px-5 text-center content-block">
+  <div class="container-fluid p-4 block-content bg-light text-center">
     <div class="row vertical-center">
       <!-- Info -->
-      <div class="col-sm-12 col-md-5 col-lg-7 my-4">
+      <div class="col-sm-12 col-md-6 col-lg-5 mb-3">
         <div class="title text-start">Equipos</div>
-        <div class="line mb-3"></div>
-        <p>En la temporada <b>{{ data && data.Info ? data.Info.temporada : '' }}</b> el número de equipos participantes de la <b>Liga 1</b> es de <b> {{ data && data.Info ? data.Info.equipos : '' }} </b> equipos:</p>
-        <div class="text-center" *ngIf="data">
-          @for (item of data.Teams; track $index) {
-            <a [href]="item.url">
-              <img [src]="item.image" class="map-item-list" [alt]="item.alt">
-            </a>
-          }
+        <div class="line-title liga-1-cc"></div>
+        <div class="my-3">
+          <p class="mb-0">En la temporada <b>{{ data && data.Info ? data.Info.temporada : '' }}</b> el número de equipos participantes de la <b>Liga 1</b> es de <b> {{ data && data.Info ? data.Info.equipos : '' }} </b> equipos:</p>
+          <div class="text-center" *ngIf="data">
+            @for (item of data.Teams; track $index) {
+              <a [href]="item.url">
+                <img [src]="item.image" class="img-item-list" [alt]="item.alt">
+              </a>
+            }
+          </div>
         </div>
-        <div class="line-lg my-3"></div>
+        <div class="line-content liga-1-cc"></div>
         <div class="row">
           <div class="col"></div>
           <div class="col">
@@ -80,7 +80,7 @@
         </div>
       </div>
       <!-- Mapa -->
-      <div class="col-sm-12 col-md-7 col-lg-4">
+      <div class="col-sm-12 col-md-5 col-lg-4">
         <div class="map py-5">
           <svg stroke-width="2" viewBox="-200 0 1400 1470" xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink="http://www.w3.org/1999/xlink"version="1.1">
             @if (data) {
@@ -95,53 +95,53 @@
     </div>
   </div>
   <!-- Formato -->
-  <div class="container-fluid py-5 px-5 format-content content-block">
+  <div class="container-fluid p-4 block-content dark-content">
     <div class="row">
       <!-- L -->
-      <div class="col-sm-12 col-md-5 col-lg-4 vertical-center">
+      <div class="col-sm-12 col-md-4 col-lg-4 vertical-center">
         <div>
           <div class="title">Título Nacional</div>
-          <div class="line mb-3"></div>
+          <div class="line-title liga-1-cc mb-3"></div>
           <p>El título de la Liga 1 se definirá con 2 rondas denominadas <b>Apertura</b> y <b>Clausura</b> con las siguientes consideraciones.</p>
-          <img class="img-fluid" src="https://img.asmedia.epimg.net/resizer/WGgObp2RSJCwqpTp65q2sHRMBIU=/1472x1104/cloudfront-eu-central-1.images.arcpublishing.com/diarioas/C64XC5QLVFBA5LZB7RKKVOBRLQ.jpg" alt="formato-logo">
+          <img class="img-fluid" src="./assets/images/otros/copa-liga-1.webp" alt="formato-logo">
         </div>
       </div>
       <!-- R -->
-      <div class="col-sm-12 col-md-7 col-lg-7 vertical-center">
+      <div class="col-sm-12 col-md-7 col-lg-5 vertical-center">
         <div class="col-12">
           <!-- Item 1 -->
           <div class="row format-item my-4 mx-1">
-            <div class="col-sm-12 col-md-2"><div class="round"><i class="far fa-futbol"></i></div></div>
+            <div class="col-sm-12 col-md-2"><div class="circle"><i class="far fa-futbol"></i></div></div>
             <div class="col-sm-12 col-md-10">
               <p><b>Sin Final</b></p>
-              <div class="line2"></div>
+              <div class="line-subtitle liga-1-cc"></div>
               <p>Si un equipo gana ambos torneos, se proclama automáticamente campeón nacional.</p>
             </div>
           </div>
           <!-- Item 2 -->
           <div class="row format-item my-4 mx-1">
-            <div class="col-sm-12 col-md-2"><div class="round"><i class="far fa-futbol"></i></div></div>
+            <div class="col-sm-12 col-md-2"><div class="circle"><i class="far fa-futbol"></i></div></div>
             <div class="col-sm-12 col-md-10">
               <p><b>Final</b></p>
-              <div class="line2"></div>
+              <div class="line-subtitle liga-1-cc"></div>
               <p>Si los dos equipos ganadores de los torneos también son los 2 primeros del acumulado, se jugará directamente la Final entre esos equipos.</p>
             </div>
           </div>
           <!-- Item 3 -->
           <div class="row format-item my-4 mx-1">
-            <div class="col-sm-12 col-md-2"><div class="round"><i class="far fa-futbol"></i></div></div>
+            <div class="col-sm-12 col-md-2"><div class="circle"><i class="far fa-futbol"></i></div></div>
             <div class="col-sm-12 col-md-10">
               <p><b>Semifinal y Final</b></p>
-              <div class="line2"></div>
+              <div class="line-subtitle liga-1-cc"></div>
               <p>Si un equipo gana el Apertura o Clausura y está entre los dos primeros del acumulado, clasifica directamente a la Final. El rival será el ganador de la semifinal entre el otro ganador de un torneo y el otro equipo del acumulado.</p>
             </div>
           </div>
           <!-- Item 4 -->
           <div class="row format-item my-4 mx-1">
-            <div class="col-sm-12 col-md-2"><div class="round"><i class="far fa-futbol"></i></div></div>
+            <div class="col-sm-12 col-md-2"><div class="circle"><i class="far fa-futbol"></i></div></div>
             <div class="col-sm-12 col-md-10">
               <p><b>Doble Semifinal y Final</b></p>
-              <div class="line2"></div>
+              <div class="line-subtitle liga-1-cc"></div>
               <p>Si los campeones del Apertura, Clausura y los 2 primeros del acumulado son diferentes equipos, se disputarán 2 Semifinales y Final.</p>
             </div>
           </div>
@@ -150,15 +150,15 @@
     </div>
   </div>
   <!-- Torneos Conmebol -->
-  <div class="container-fluid bg-light py-5 px-5 content-block">
+  <div class="container-fluid p-4 block-content bg-light">
     <div class="row">
-      <div class="col-sm-12 col-md-11">
+      <div class="col-sm-12 col-md-11 col-lg-9">
         <div class="title">Torneos Conmebol</div>
-        <div class="line mb-3"></div>
+        <div class="line-title liga-1-cc mb-3"></div>
         <p>Los cupos a torneos internacionales otorgados a equipos de Perú son 8 y estan divididos de la siguiente forma.</p>
       </div>
       <!-- Copa Libertadores -->
-      <div class="col-sm-12 col-md-11">
+      <div class="col-sm-12 col-md-11 col-lg-9">
         <div class="row">
           <!-- L -->
           <div class="col-sm-12 col-md-5 conmebol-tournaments">
@@ -173,7 +173,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 1</b></p>
-                <div class="lineL"></div>
+                <div class="line-subtitle lineL"></div>
                 <p>Campeón de la Liga 1</p>
               </div>
             </div>
@@ -182,7 +182,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 2</b></p>
-                <div class="lineL"></div>
+                <div class="line-subtitle lineL"></div>
                 <p>Subampeón de la Liga 1</p>
               </div>
             </div>
@@ -191,7 +191,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 3</b></p>
-                <div class="lineL"></div>
+                <div class="line-subtitle lineL"></div>
                 <p>Tercer lugar de la Liga 1</p>
               </div>
             </div>
@@ -200,7 +200,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 4</b></p>
-                <div class="lineL"></div>
+                <div class="line-subtitle lineL"></div>
                 <p>Cuarto lugar de la Liga 1</p>
               </div>
             </div>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <!-- Copa Sudamericana -->
-      <div class="col-sm-12 col-md-11">
+      <div class="col-sm-12 col-md-11 col-lg-9">
         <div class="row">
           <!-- L -->
           <div class="col-sm-12 col-md-5 conmebol-tournaments">
@@ -223,7 +223,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 1</b></p>
-                <div class="lineS"></div>
+                <div class="line-subtitle lineS"></div>
                 <p>Quinto Lugar de la Liga 1</p>
               </div>
             </div>
@@ -232,7 +232,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 2</b></p>
-                <div class="lineS"></div>
+                <div class="line-subtitle lineS"></div>
                 <p>Sexto Lugar de la Liga 1</p>
               </div>
             </div>
@@ -241,7 +241,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 3</b></p>
-                <div class="lineS"></div>
+                <div class="line-subtitle lineS"></div>
                 <p>Séptimo Lugar de la Liga 1</p>
               </div>
             </div>
@@ -250,7 +250,7 @@
               <div class="col-1"><i class="far fa-futbol"></i></div>
               <div class="col-10">
                 <p><b>Perú 4</b></p>
-                <div class="lineS"></div>
+                <div class="line-subtitle lineS"></div>
                 <p>Octavo Lugar de la Liga 1</p>
               </div>
             </div>
@@ -260,19 +260,21 @@
     </div>
   </div>
   <!-- Descenso -->
-  <div class="container-fluid py-5 px-5 relegation-content content-block">
+  <div class="container-fluid p-4 block-content dark-content">
     <div class="row">
-      <div class="col-sm-12 col-md-5">
+      <div class="col-sm-12 col-md-7 col-lg-6">
         <div class="title">Descenso</div>
-        <div class="line mb-3"></div>
-        <p>En la temporada actual, los equipos situados en las <b>2 últimas posiciones</b> al término de la fase regular sufrirán el <b>descenso directo de categoría</b>, relegándolos a participar en la <b>Liga 2</b>.</p>
+        <div class="line-title liga-1-cc mb-3"></div>
+        <p>En la temporada actual, los equipos situados en las <b>3 últimas posiciones</b> al término de la fase regular sufrirán el <b>descenso directo de categoría</b>, relegándolos a participar en la <b>Liga 2 2025</b>.</p>
       </div>
-      <div class="col-sm-12 col-md-3">
-        <img class="img-fluid relegation-img" alt="liga-2" src="https://liga2peru.carrd.co/assets/images/image01.jpg?v98201726126851">
+      <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="row">
+          <img class="img-fluid relegation-img" alt="liga-2" src="./assets/images/otros/relegation-liga-2.webp">
+        </div>
       </div>
     </div>
   </div>
   <!-- Divider -->
-  <div class="container-fluid divider"></div>
+  <div class="divider liga-1-cc liga-1-bi"></div>
 }
 <router-outlet/>
